--- a/loginstyle.css
+++ b/loginstyle.css
@@ -47,7 +47,7 @@
 	position: absolute;
 	width: 110px;
 	height: 100%;
-	background: linear-gradient(to right, #e3e3e3, #87878f, #091213);
+	background: linear-gradient(to right, #e3e3e3, #e48a9c, #fe4066);
 	border-radius: 30px;
 	transition: 0.5s;
 }
@@ -103,7 +103,7 @@ span{
 	cursor: pointer;
 	display: block;
 	margin: auto;
-	background: linear-gradient(to right, #e3e3e3, #87878f, #091213);
+	background:#ff6886;
 	border: 0;
 	outline: none;
 	border-radius: 30px;
