--- a/jobstyle.css
+++ b/jobstyle.css
@@ -1,11 +1,6 @@
 body{font-family: 'Montserrat' sans-serif;
 }
 
-@media only screen and (min-width:1200px){
-	.nav-item > .nav-link{padding: 5px 20px !important;
-		display: block !important;}
-}
-
 @media only screen and (max-width:992px){
 	.header-inner{background-color: white!important;
 	}
@@ -17,6 +12,12 @@ body{font-family: 'Montserrat' sans-serif;
 	}
 	.content-banner .first-title{
 		font-size: 30px !important;
+	}
+}
+
+@media only screen and (min-width:1200px){
+	.nav-item > .nav-link{padding: 5px 20px !important;
+		display: block !important;
 	}
 }
 
