--- a/about.css
+++ b/about.css
@@ -7,7 +7,7 @@
 .about{
     width: 100;
     height: 100vh;
-    background-color: black;
+    background-color: white;
     display: flex;
     justify-content: center;
     align-items: center;
