--- a/about.css
+++ b/about.css
@@ -71,6 +71,25 @@ button:hover{
     cursor: pointer;
 }
 
+.google-map-link {
+    padding-bottom: 10px;
+  }
+  
+  .map-container-2{
+    overflow:hidden;
+    padding-bottom:56.25%;
+    position:relative;
+    height:0;
+  }
+  
+  .map-container-2 iframe{
+    left:0;
+    top:0;
+    height:100%;
+    width:100%;
+    position:absolute;
+  } 
+
 @media screen and (max-width: 1180px){ 
     .about{
         width: 100%;
