--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/tiny-slider.css" integrity="sha512-eMxdaSf5XW3ZW1wZCrWItO2jZ7A9FhuZfjVdztr7ZsKNOmt6TUMTQgfpNoVRyfPE5S9BC0A4suXzsGSrAOWcoQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
         
-        <link rel="stylesheet" type="text/css" href="about.css">
+        <link rel="stylesheet" type="text/css" href="/css/about.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Inter+Tight:wght@200&display=swap" rel="stylesheet">
@@ -27,7 +27,7 @@
                     <h5>Web Programming</h5>
                     <p><b>Freelancing</b> is an online job marketplace that provides a means for clients and freelancers around the globe to collaborate for mutual benefit. Individuals or businesses in need of skilled help for short or long-term projects can post those projects and allow freelancers to submit bids for the completion of the work.</p>
                     <p>For the <b>client</b> or service buyer, Freelancer.com provides immediate access to thousands of independent contractors with specific skills, without the need to place job ads or provide work space, insurance, etc. For the <b>freelancer</b> or service provider, Freelancer.com offers a constant source of part-time to full-time work opportunities, without the trouble and expenses of advertising and self-promotion. </p>
-                    <a href="index.html">
+                    <a href="/">
                         <button type="button">Back To Website</button>
                     </a>
                 </div>
