--- a/public/css/freelancerstyle.css
+++ b/public/css/freelancerstyle.css
@@ -1,7 +1,7 @@
 body {
     padding: 0%;
     margin: 0%;
-    background-image: url(img/background.jpg); 
+    background-image: url(../img/login/background.jpg); 
     background-size: cover;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin: 0;
