--- a/views/pages/loginpage.ejs
+++ b/views/pages/loginpage.ejs
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Login or SignUp</title>
-	<link rel="stylesheet" type="text/css" href="loginstyle.css">
+	<link rel="stylesheet" type="text/css" href="/css/loginstyle.css">
 </head>
 <body>
 	<div class="hero">
