--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -13,16 +13,16 @@
                         <a class="nav-link" href="#">How It Works<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="findjobs.ejs">Find Job<span class="sr-only"></span></a>
+                        <a class="nav-link" href="/findjob">Find Job<span class="sr-only"></span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="findfreelancers.ejs">Find Freelancers<span class="sr-only"></span></a>
+                        <a class="nav-link" href="/findfreelancer">Find Freelancers<span class="sr-only"></span></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#TopJobs">Top Jobs<span class="sr-only"></span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="about.ejs">About Us<span class="sr-only"></span></a>
+                        <a class="nav-link" href="/about">About Us<span class="sr-only"></span></a>
                     </li>
                 </ul>
                 <form class="form-inline my-2 my-lg-0">
