--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -26,7 +26,7 @@
                     </li>
                 </ul>
                 <form class="form-inline my-2 my-lg-0">
-                    <a class="header-btn my-2 my-sm-0" type="submit" href="/logins">Log In</a>
+                    <a class="header-btn my-2 my-sm-0" type="submit" href="/logins">Test</a>
                 </form>
             </div>
         </nav>
