--- a/views/pages/findjobs.ejs
+++ b/views/pages/findjobs.ejs
@@ -186,7 +186,7 @@
                         <div class="col border-bottom">
                             <h4>$10-$30</h4>
                             <br>
-                            <a href="templateapply.html"><button class="btn btn-pink PageJobs-sectionHero-cta">Apply</button></a>
+                            <a href="/jobs"><button class="btn btn-pink PageJobs-sectionHero-cta">Apply</button></a>
                         </div>
                     </div>
                     <br><div class="row">
@@ -197,7 +197,7 @@
                         <div class="col border-bottom">
                             <h4>$30-$40/Hour</h4>
                             <br>
-                            <a href="templateapply.html"><button class="btn btn-pink PageJobs-sectionHero-cta">Apply</button></a>
+                            <a href="/jobs"><button class="btn btn-pink PageJobs-sectionHero-cta">Apply</button></a>
                         </div>
                     </div>
                     <br><div class="row">
@@ -208,7 +208,7 @@
                         <div class="col border-bottom">
                             <h4>$70</h4>
                             <br>
-                            <a href="templateapply.html"><button class="btn btn-pink PageJobs-sectionHero-cta">Apply</button></a>
+                            <a href="/jobs"><button class="btn btn-pink PageJobs-sectionHero-cta">Apply</button></a>
                         </div>
                     </div>
                     <br><div class="row">
@@ -219,7 +219,7 @@
                         <div class="col border-bottom">
                             <h4>$10-$20/Hour</h4>
                             <br>
-                            <a href="templateapply.html"><button class="btn btn-pink PageJobs-sectionHero-cta">Apply</button></a>
+                            <a href="/jobs"><button class="btn btn-pink PageJobs-sectionHero-cta">Apply</button></a>
                         </div>
                     </div>
                     <br><div class="row">
@@ -230,7 +230,7 @@
                         <div class="col border-bottom">
                             <h4>$7/Hour</h4>
                             <br>
-                            <a href="templateapply.html"><button class="btn btn-pink PageJobs-sectionHero-cta">Apply</button></a>
+                            <a href="/jobs"><button class="btn btn-pink PageJobs-sectionHero-cta">Apply</button></a>
                         </div>
                     </div>
                     <br><div class="row">
@@ -241,7 +241,7 @@
                         <div class="col border-bottom">
                             <h4>$1500</h4>
                             <br>
-                            <a href="templateapply.html"><button class="btn btn-pink PageJobs-sectionHero-cta">Apply</button></a>
+                            <a href="/jobs"><button class="btn btn-pink PageJobs-sectionHero-cta">Apply</button></a>
                         </div>
                     </div>
                     <br><div class="row">
@@ -252,7 +252,7 @@
                         <div class="col border-bottom">
                             <h4>$1900</h4>
                             <br>
-                            <a href="templateapply.html"><button class="btn btn-pink PageJobs-sectionHero-cta">Apply</button></a>
+                            <a href="/jobs"><button class="btn btn-pink PageJobs-sectionHero-cta">Apply</button></a>
                         </div>
                     </div>
                     <br><div class="row">
@@ -263,7 +263,7 @@
                         <div class="col border-bottom">
                             <h4>$15/Hour</h4>
                             <br>
-                            <a href="templateapply.html"><button class="btn btn-pink PageJobs-sectionHero-cta">Apply</button></a>
+                            <a href="/jobs"><button class="btn btn-pink PageJobs-sectionHero-cta">Apply</button></a>
                         </div>
                     </div>
                     <br><div class="row">
@@ -274,7 +274,7 @@
                         <div class="col border-bottom">
                             <h4>$75</h4>
                             <br>
-                            <a href="templateapply.html"><button class="btn btn-pink PageJobs-sectionHero-cta">Apply</button></a>
+                            <a href="/jobs"><button class="btn btn-pink PageJobs-sectionHero-cta">Apply</button></a>
                         </div>
                     </div>
                     <br><div class="row">
@@ -285,7 +285,7 @@
                         <div class="col border-bottom">
                             <h4>$17/Hour</h4>
                             <br>
-                            <a href="templateapply.html"><button class="btn btn-pink PageJobs-sectionHero-cta">Apply</button></a>
+                            <a href="/jobs"><button class="btn btn-pink PageJobs-sectionHero-cta">Apply</button></a>
                         </div>
                     </div>
                     <br><div class="row">
@@ -296,7 +296,7 @@
                         <div class="col border-bottom">
                             <h4>$80</h4>
                             <br>
-                            <a href="templateapply.html"><button class="btn btn-pink PageJobs-sectionHero-cta">Apply</button></a>
+                            <a href="/jobs"><button class="btn btn-pink PageJobs-sectionHero-cta">Apply</button></a>
                         </div>
                     </div>
                     <br><div class="row">
@@ -307,7 +307,7 @@
                         <div class="col border-bottom">
                             <h4>$8420</h4>
                             <br>
-                            <a href="templateapply.html"><button class="btn btn-pink PageJobs-sectionHero-cta">Apply</button></a>
+                            <a href="/jobs"><button class="btn btn-pink PageJobs-sectionHero-cta">Apply</button></a>
                         </div>
                     </div>
                    <br><div class="row">
@@ -318,7 +318,7 @@
                         <div class="col border-bottom">
                             <h4>$400</h4>
                             <br>
-                            <a href="templateapply.html"><button class="btn btn-pink PageJobs-sectionHero-cta">Apply</button></a>
+                            <a href="/jobs"><button class="btn btn-pink PageJobs-sectionHero-cta">Apply</button></a>
                         </div>
                     </div>
                     <br><div class="row">
@@ -329,7 +329,7 @@
                         <div class="col border-bottom">
                             <h4>$100</h4>
                             <br>
-                            <a href="templateapply.html"><button class="btn btn-pink PageJobs-sectionHero-cta">Apply</button></a>
+                            <a href="/jobs"><button class="btn btn-pink PageJobs-sectionHero-cta">Apply</button></a>
                         </div>
                     </div>
                     <br><div class="row">
@@ -340,7 +340,7 @@
                         <div class="col border-bottom">
                             <h4>$40-$50</h4>
                             <br>
-                            <a href="templateapply.html"><button class="btn btn-pink PageJobs-sectionHero-cta">Apply</button></a>
+                            <a href="/jobs"><button class="btn btn-pink PageJobs-sectionHero-cta">Apply</button></a>
                         </div>
                     </div>
                 </div>
