--- a/views/pages/findfreelancers.ejs
+++ b/views/pages/findfreelancers.ejs
@@ -17,15 +17,15 @@
         <div class="wrapper">
             <h2>Tell us what you need done</h2>
 
-            <form action="" method="post">
+            <form action="/api/auth/createJobs" method="post">
                 <div class="form-group">
-                    <label for="">Choose a name for your project</label>
-                    <input type="text"
+                    <label for="title">Choose a name for your project</label>
+                    <input name="title" type="text"
                     placeholder="ex. Build me a website">
                 </div>
                 <div class="form-group">
                     <label for="">Tell us more about your project</label>
-                    <textarea name="" id="" rows="5" placeholder="Describe your project here..."></textarea>
+                    <textarea name="description" rows="5" placeholder="Describe your project here..."></textarea>
                 </div>
                 <div class="form-group">
                     <button type="submit" class="submit">Submit</button>
